# Senior_project

./: CMakeLists.txt  Rotate_test.py  Teleop_test.py  create_map_offline_manual.txt  manual.txt  package.xml  platformio.ini  teleop.py  teleop1.py  test.py
config/: 11.yaml  ekf.yaml  ekf1.yaml  nav2_carter_style_fix.yaml  nav2_carter_style_quicktest.yaml  nav2_carter_style_smooth.yaml
esp32_IMUnode/: Uart_BNO086.cpp
esp32_drivenode/: Uart_Drive.cpp  v6.cpp
install/: local_setup.sh  setup.sh
install/whitepost_robot/lib/whitepost_robot/: esp32_drive_node  esp32_sensor_node
install/whitepost_robot/share/whitepost_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
joysick_controler/: joy_stick.cpp
launch/: Apriltag.launch.py  nav2_with_tf.launch.py
log/: latest_build
scripts/: Nav2_through_pose.py  image_camera_info_qos_bridge.py  qos_relay.py
src/: Senior_project.code-workspace  SmileEVO24.cpp  SmileEVO24.h  Uart_Drive.cpp  bts7960.c  bts7960.h  encoder.c  encoder.h  encoderPCNT.c.txt  encoderPCNT.h.txt  main.cpp
src/whitepost_robot/: setup.cfg  setup.py
src/whitepost_robot/launch/: whitepostlaunch.py
src/whitepost_robot/whitepost_robot/: esp32_drive_nodeV2.py  esp32_sensor_node.py  esp32_sensor_nodeV2.py
test/: BNO086_Test.cpp  BNO_086_FreeRTOS_microros.cpp  MicroROS_RTOS_BNO086.cpp  Micro_ros_BNO086.cpp  Micro_ros_BNO086V2.cpp  Uart_drive.cpp  Uart_driveV2.cpp  Uart_driveV3.cpp  Uart_driveV4.cpp  micro-ros-drive.cpp  py_writeserial.py  test.py  v5.cpp
